tests/jsr335/Semantics/InterfaceMethods/MethodDeclarations/ShouldFail/syntax20/Test.java


public class Test {
	interface A {
		static void m(int i);
	}
}